Change name on CV

--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -18,7 +18,7 @@
 \usepackage{tabu}
 
 % Set your name here
-\def\name{Chengxin-Michael Xu}
+\def\name{Chengxin Xu}
 
 % Replace this with a link to your CV if you like, or set it empty
 % (as in \def\footerlink{}) to remove the link in the footer:
