--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -164,34 +164,41 @@
 
 \begin{itemize}
 	
-\item \textbf{Xu, C}. (2020). The Perceived Differences: The Sector Stereotypes of Social Service Providers. Forthcoming at {\it Nonprofit and Voluntary Sector Quarterly}.	
+\item \textbf{Xu, Chengxin}. and Kim, Mirae. (2020). Unpacking Nonprofit Autonomy-Interdependence Paradox in Collaborative Relationships. Forthcoming at {\it American Review of Public Administration}.
 
-\item Li, H., \textbf{Xu, C}., and McDougle, L. (2019). Philanthropy Can Be Learned: A Qualitative Study of Student Experiences in Experiential Philanthropy Courses. {\it Philanthropy and Education}. {\it 2}(2), 29-52.
 
-\item Jilke, S., Lu, J., \textbf{Xu, C}., and Shinohara, S. (2019). Using Large Scale Social Media Experiments in Public Administration: Assessing Charitable Consequences of Government Funding to Nonprofits. {\it Journal of Public Administration Research and Theory}. {\it 29}(4), 627-639.
+\item \textbf{Xu, Chengxin}. (2020). The Perceived Differences: The Sector Stereotypes of Social Service Providers. {\it Nonprofit and Voluntary Sector Quarterly}.	{\it 49}(6), 1293-1310.
 
-\item Lu, J. and \textbf{Xu, C}. (2018). Complementary or Supplementary? The Relationship between Government Size and Nonprofit Sector Size. {\it VOLUNTAS}. {\it 29}(3), 454-469.
+\item Li, Huafang, \textbf{Xu, Chengxin}., and McDougle, Lindsey. (2019). Philanthropy Can Be Learned: A Qualitative Study of Student Experiences in Experiential Philanthropy Courses. {\it Philanthropy and Education}. {\it 2}(2), 29-52.
 
-\item McDougle, L., McDonald, D., McIntyre Miller, W., Li, H., and \textbf{Xu, C}. (2017). Can Philanthropy be Taught? {\it Nonprofit and Voluntary Sector Quarterly}. {\it 46}(2), 330-351. 
+\item Jilke, Sebastian., Lu, Jiahuan., \textbf{Xu, Chengxin}., and Shinohara, Shugo. (2019). Using Large Scale Social Media Experiments in Public Administration: Assessing Charitable Consequences of Government Funding to Nonprofits. {\it Journal of Public Administration Research and Theory}. {\it 29}(4), 627-639.
+
+\item Lu, Jiahuan. and \textbf{Xu, Chengxin}. (2018). Complementary or Supplementary? The Relationship between Government Size and Nonprofit Sector Size. {\it VOLUNTAS}. {\it 29}(3), 454-469.
+
+\item McDougle, Lindsey, McDonald, D., McIntyre Miller, W., Li, Hhuafang, and \textbf{Xu, Chengxin}. (2017). Can Philanthropy be Taught? {\it Nonprofit and Voluntary Sector Quarterly}. {\it 46}(2), 330-351. 
 
 \end{itemize}
 
 \subsection*{Book Chapters and Others}
 \begin{itemize}
 	
-\item \textbf{Xu, C}., Li, H., and McDougle, L. (2018) Experiential Philanthropy in {\it Global Encyclopaedia of Public Administration, Public Policy, and Governance}. Springer Publication.
+\item \textbf{Xu, Chengxin}., Li, Huafang, and McDougle, Lindsey (2018) Experiential Philanthropy in {\it Global Encyclopaedia of Public Administration, Public Policy, and Governance}. Springer Publication.
 
 \end{itemize}
 
 \subsection*{Manuscripts Under Review}
 \begin{itemize}
+	
+\item Liu, Yixin and \textbf{Xu, Chengxin}. De-stereotyping Public Performance Evaluation. Under review at {\it Public Administration Review}.
 
-\item \textbf{Xu, Chengxin}. and Kim, Mirae. Unpacking Nonprofit Autonomy-Interdependence Paradox in Collaborative Relationships. Invited to revise and resubmit at {\it American Review of Public Administration}.
+\item Vogel, Dominik, and \textbf{Xu, Chengxin}. Everything hacked? What is the Evidential Value of the Experimental Public Administration Literature? Under review at {\it Journal of Behavioral Public Administration}.
 
 \item \textbf{Xu, Chengxin} and Liu, Yixin, Does Labeling COVID-19 as “Chinese Virus” Trigger Perceived Foreign Threats and
-Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psyarxiv.com/j4t2r/}). Under review at {\it Journal of Experimental Political Science}.
+Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psyarxiv.com/j4t2r/}). Invited to revise and resubmit at {\it Journal of Behavioral Public Administration}.
 
-\item \textbf{Xu, Chengxin}. and Li, Huafang., Resource Publicness Triggers Sector Stereotyping. Under review at {\it Journal of Public Administration Research and Theory}.
+\item Favero, Nathan, Jilke, Sebastian, \textbf{Xu, Chengxin} and Young, Matthew. Source Effects in COVID-19 Communication: Does the Level of Government Matter? Invited to revise and resubmit at {\it Health Policy OPEN}.
+
+\item \textbf{Xu, Chengxin}. and Li, Huafang., Resource Publicness Triggers Sector Stereotyping. Under review at {\it Public Administration Review}.
 
 \end{itemize}
 
@@ -199,15 +206,11 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 \subsection*{Manuscripts in Preparation}
 \begin{itemize}
 
-\item Liu, Yixin and \textbf{Xu, Chengxin}. De-stereotyping Public Performance Evaluation ({\it Data Collection}).
+\item \textbf{Xu, Chengxin}. Technology Transfer, Research Commercialization, and the Credit Ratings of Nonprofit Universities ({\it Finalizing}).
 
-\item Favero, Nathan, Jilke, Sebastian, \textbf{Xu, Chengxin} and Young, Matthew. Source Effects in COVID-19 Communication: Does the Level of Government Matter? ({\it Finalizing})
+\item \textbf{Xu, Chengxin}. Relational Fitness: A Model for Sector Differences ({\it Data Collection}).
 
-\item Vogel, Dominik, and \textbf{Xu, C}. Everything hacked? What is the Evidential Value of the Experimental Public Administration Literature? ({\it Data Collection})
-
-\item \textbf{Xu, C}. Technology Transfer, Research Commercialization, and the Credit Ratings of Nonprofit Universities ({\it Finalizing}).
-
-\item \textbf{Xu, C}. Relational Fitness: A Model for Sector Differences ({\it Research Design}).
+\item \textbf{Xu, Chengxin}. A Field Experiment on Discrimination against Immigrants in the U.S. Health Care Market ({\it Research Design}).
 
 \end{itemize}
 
@@ -221,6 +224,15 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 \end{itemize}
 
 \subsection*{Papers Presented}
+\subsubsection*{2020}
+\begin{itemize}
+
+\item ``Relational Fitness: A Model for Perceived Sector Difference". Association for Research on Nonprofit Organizations and Voluntary Action (ARNOVA) Annual Conference, Online.
+	
+\item ``Destereotyping Public Performance Evaluation". European Group for Public Administration (EGPA) e-Conference. (with Yixin Liu)
+	
+\end{itemize}
+
 \subsubsection*{2019}
 \begin{itemize}
 
@@ -295,6 +307,8 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 \section*{AWARDS AND HONORS}
 \begin{itemize}
 	
+\item {\it Student Assistantship Award (Competitive)}, College of Art \& Science, Seattle University, 2020-21. 
+	
 \item {\it Outstanding Ph.D Student}, School of Public Affairs and Administration, Rutgers-Newark, 2019
 
 \item {\it Hayek Fund}, Institute for Humane Studies at George Mason University ({\it \$700}), 2018
@@ -342,7 +356,7 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 \subsection*{Manuscript Reviewer}
 \begin{itemize}
 	
-\item {\it Nonprofit and Voluntary Sector Quarterly, Public Management Review, Nonprofit Management and Leadership, Journal of Behavioral Public Administration, Journal of Nonprofit and Public Affairs, Chinese Public Administration Review.}
+\item {\it Nonprofit and Voluntary Sector Quarterly, Public Management Review, Nonprofit Management and Leadership, Journal of Public Administration Research and Theory, Journal of Behavioral Public Administration, Journal of Nonprofit and Public Affairs, Chinese Public Administration Review.}
 
 \end{itemize}
 
@@ -351,15 +365,11 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 \section*{PROFESSIONAL MEMBERSHIPS}
 \begin{itemize}
 	
-\item American Society of Public Administration ({\it ASPA})
-
 \item Public Management Research Association ({\it PMRA})
 	
 \item Association for Research on Nonprofit Organizations and Voluntary Action ({\it ARNOVA})
 
-\item Academy of Management ({\it AOM})
-
-\item Association of University Technology Managers ({\it AUTM})
+\item Society for Judgment and Decision Making ({\it SJDM})
 
 \end{itemize}
 
