--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -16,6 +16,7 @@
 \reversemarginpar
 
 \usepackage{tabu}
+%\usepackage{etaremune}
 
 % Set your name here
 \def\name{Chengxin Xu}
@@ -163,9 +164,12 @@
 \subsection*{Journal Articles}
 
 \begin{itemize}
-	
-\item \textbf{Xu, Chengxin}. and Kim, Mirae. (2020). Unpacking Nonprofit Autonomy-Interdependence Paradox in Collaborative Relationships. Forthcoming at {\it American Review of Public Administration}.
 
+\item \textbf{Xu, Chengxin}. and Li, Huafang., Resource Publicness Matters in Organizational Perceptions. (2021). Forthcoming at {\it Public Administration Review}.
+
+\item \textbf{Xu, Chengxin}. and Kim, Mirae. (2021). Unpacking Nonprofit Autonomy-Interdependence Paradox in Collaborative Relationships. {\it American Review of Public Administration}. Online first.
+
+\item Favero, Nathan, Jilke, Sebastian, Wolfson, Julia A., \textbf{Xu, Chengxin} and Young, Matthew. (2020) Messenger effects in COVID-19 communication: Does the level of government matter? {\it Health Policy OPEN}, 100027. 
 
 \item \textbf{Xu, Chengxin}. (2020). The Perceived Differences: The Sector Stereotypes of Social Service Providers. {\it Nonprofit and Voluntary Sector Quarterly}.	{\it 49}(6), 1293-1310.
 
@@ -195,10 +199,6 @@
 
 \item \textbf{Xu, Chengxin} and Liu, Yixin, Does Labeling COVID-19 as “Chinese Virus” Trigger Perceived Foreign Threats and
 Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psyarxiv.com/j4t2r/}). Invited to revise and resubmit at {\it Journal of Behavioral Public Administration}.
-
-\item Favero, Nathan, Jilke, Sebastian, \textbf{Xu, Chengxin} and Young, Matthew. Source Effects in COVID-19 Communication: Does the Level of Government Matter? Invited to revise and resubmit at {\it Health Policy OPEN}.
-
-\item \textbf{Xu, Chengxin}. and Li, Huafang., Resource Publicness Triggers Sector Stereotyping. Under review at {\it Public Administration Review}.
 
 \end{itemize}
 
