--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -195,7 +195,7 @@
 	
 \item Liu, Yixin and \textbf{Xu, Chengxin}. De-stereotyping Public Performance Evaluation. Under review at {\it Public Administration Review}.
 
-\item Vogel, Dominik, and \textbf{Xu, Chengxin}. Everything hacked? What is the Evidential Value of the Experimental Public Administration Literature? Under review at {\it Journal of Behavioral Public Administration}.
+\item Vogel, Dominik, and \textbf{Xu, Chengxin}. Everything hacked? What is the Evidential Value of the Experimental Public Administration Literature? Invited to revise and resubmit at {\it Journal of Behavioral Public Administration}.
 
 \item \textbf{Xu, Chengxin} and Liu, Yixin, Does Labeling COVID-19 as “Chinese Virus” Trigger Perceived Foreign Threats and
 Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psyarxiv.com/j4t2r/}). Invited to revise and resubmit at {\it Journal of Behavioral Public Administration}.
