--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -208,7 +208,7 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 
 \item \textbf{Xu, Chengxin}. Technology Transfer, Research Commercialization, and the Credit Ratings of Nonprofit Universities ({\it Finalizing}).
 
-\item \textbf{Xu, Chengxin}. Relational Fitness: A Model for Sector Differences ({\it Data Collection}).
+\item \textbf{Xu, Chengxin}. Relational Fitness: A Model for the Moral Legitimacy of Business-like Practices in Nonprofits ({\it Data Collection}).
 
 \item \textbf{Xu, Chengxin}. A Field Experiment on Discrimination against Immigrants in the U.S. Health Care Market ({\it Research Design}).
 
@@ -347,8 +347,6 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 	
 \item Track Chair, Association for Research on Nonprofit Organizations and Voluntary Action (ARNOVA) Annual Conference, 2020
 
-\item Assistant Editor, {\it Chinese Public Administration Review}, 2016-
-
 \item Editor, \href{https://pagateway.newark.rutgers.edu/}{\it Public Administration Gateway}, 2013-2016
 
 \end{itemize}
@@ -368,6 +366,8 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 \item Public Management Research Association ({\it PMRA})
 	
 \item Association for Research on Nonprofit Organizations and Voluntary Action ({\it ARNOVA})
+
+\item American Political Science Association ({\it APSA})
 
 \item Society for Judgment and Decision Making ({\it SJDM})
 
