--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -347,7 +347,7 @@ Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psya
 	
 \item Track Chair, Association for Research on Nonprofit Organizations and Voluntary Action (ARNOVA) Annual Conference, 2020
 
-\item Editor, \href{https://pagateway.newark.rutgers.edu/}{\it Public Administration Gateway}, 2013-2016
+\item Editor, {\it Public Administration Gateway}, 2013-2016
 
 \end{itemize}
 
