--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -165,15 +165,17 @@
 
 \begin{itemize}
 
-\item \textbf{Xu, Chengxin}. and Li, Huafang., Resource Publicness Matters in Organizational Perceptions. (2021). Forthcoming at {\it Public Administration Review}.
+\item \textbf{Xu, Chengxin} and Liu, Yixin. (2021). Does Mislabeling COVID-19 Elicit the Perception of Threat and Reduce Blame?.  {\it Journal of Bebavorial Public Administration}. {\it 4}(2).
 
-\item \textbf{Xu, Chengxin}. and Kim, Mirae. (2021). Unpacking Nonprofit Autonomy-Interdependence Paradox in Collaborative Relationships. {\it American Review of Public Administration}. Online first.
+\item \textbf{Xu, Chengxin} and Li, Huafang. (2021). Resource Publicness Matters in Organizational Perceptions.  {\it Public Administration Review}. Online first.
 
-\item Favero, Nathan, Jilke, Sebastian, Wolfson, Julia A., \textbf{Xu, Chengxin} and Young, Matthew. (2020) Messenger effects in COVID-19 communication: Does the level of government matter? {\it Health Policy OPEN}, 100027. 
+\item \textbf{Xu, Chengxin} and Kim, Mirae. (2021). Unpacking Nonprofit Autonomy-Interdependence Paradox in Collaborative Relationships. {\it American Review of Public Administration}. Online first.
+
+\item Favero, Nathan, Jilke, Sebastian, Wolfson, Julia A., \textbf{Xu, Chengxin} and Young, Matthew. (2020) Messenger Effects in COVID-19 Communication: Does the Level of Government Matter? {\it Health Policy OPEN}, 100027. 
 
 \item \textbf{Xu, Chengxin}. (2020). The Perceived Differences: The Sector Stereotypes of Social Service Providers. {\it Nonprofit and Voluntary Sector Quarterly}.	{\it 49}(6), 1293-1310.
 
-\item Li, Huafang, \textbf{Xu, Chengxin}., and McDougle, Lindsey. (2019). Philanthropy Can Be Learned: A Qualitative Study of Student Experiences in Experiential Philanthropy Courses. {\it Philanthropy and Education}. {\it 2}(2), 29-52.
+\item Li, Huafang, \textbf{Xu, Chengxin}, and McDougle, Lindsey. (2019). Philanthropy Can Be Learned: A Qualitative Study of Student Experiences in Experiential Philanthropy Courses. {\it Philanthropy and Education}. {\it 2}(2), 29-52.
 
 \item Jilke, Sebastian., Lu, Jiahuan., \textbf{Xu, Chengxin}., and Shinohara, Shugo. (2019). Using Large Scale Social Media Experiments in Public Administration: Assessing Charitable Consequences of Government Funding to Nonprofits. {\it Journal of Public Administration Research and Theory}. {\it 29}(4), 627-639.
 
@@ -196,9 +198,6 @@
 \item Liu, Yixin and \textbf{Xu, Chengxin}. De-stereotyping Public Performance Evaluation. Under review at {\it Public Administration Review}.
 
 \item Vogel, Dominik, and \textbf{Xu, Chengxin}. Everything hacked? What is the Evidential Value of the Experimental Public Administration Literature? Invited to revise and resubmit at {\it Journal of Behavioral Public Administration}.
-
-\item \textbf{Xu, Chengxin} and Liu, Yixin, Does Labeling COVID-19 as “Chinese Virus” Trigger Perceived Foreign Threats and
-Reduce the Blame? (preprint: \href{https://psyarxiv.com/j4t2r/}{\tt https://psyarxiv.com/j4t2r/}). Invited to revise and resubmit at {\it Journal of Behavioral Public Administration}.
 
 \end{itemize}
 
