--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -165,7 +165,7 @@
 
 \begin{itemize}
 
-\item \textbf{Xu, Chengxin} and Liu, Yixin. (2021). Does Mislabeling COVID-19 Elicit the Perception of Threat and Reduce Blame?.  {\it Journal of Bebavorial Public Administration}. {\it 4}(2).
+\item \textbf{Xu, Chengxin} and Liu, Yixin. ({\it Equal authorship}) (2021). Does Mislabeling COVID-19 Elicit the Perception of Threat and Reduce Blame?.  {\it Journal of Bebavorial Public Administration}. {\it 4}(2).
 
 \item \textbf{Xu, Chengxin} and Li, Huafang. (2021). Resource Publicness Matters in Organizational Perceptions.  {\it Public Administration Review}. Online first.
 
