--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -2,6 +2,7 @@
 
 \usepackage{hyperref}
 \usepackage{geometry}
+\usepackage{etaremune} %for reverse numerate listing
 
 % Comment the following lines to use the default Computer Modern font
 % instead of the Palatino font provided by the mathpazo package.
@@ -135,7 +136,7 @@
    &{\it Dissertation}: Financing Social Missions: Essays on the Role of Commercialization in Nonprofit Social Service Organizations in the U.S.\\
    &\\
    2015 & \textbf{Rutgers University-Newark} \\
-   &M.P.A.\\
+   &Master of Public Administration\\
    & \\
    2010 & \textbf{East China University of Political Science and Law} \\
    &BA in \it{Law}
@@ -163,7 +164,9 @@
 \section*{PUBLICATIONS}
 \subsection*{Journal Articles}
 
-\begin{itemize}
+\begin{etaremune}
+
+\item Vogel, Dominik, and \textbf{Xu, Chengxin} (2021). Everything hacked? What is the Evidential Value of the Experimental Public Administration Literature? {\it Journal of Behavioral Public Administration}. {\it 4}(2).
 
 \item \textbf{Xu, Chengxin} and Liu, Yixin. ({\it Equal authorship}) (2021). Does Mislabeling COVID-19 Elicit the Perception of Threat and Reduce Blame?.  {\it Journal of Bebavorial Public Administration}. {\it 4}(2).
 
@@ -183,7 +186,7 @@
 
 \item McDougle, Lindsey, McDonald, D., McIntyre Miller, W., Li, Hhuafang, and \textbf{Xu, Chengxin}. (2017). Can Philanthropy be Taught? {\it Nonprofit and Voluntary Sector Quarterly}. {\it 46}(2), 330-351. 
 
-\end{itemize}
+\end{etaremune}
 
 \subsection*{Book Chapters and Others}
 \begin{itemize}
@@ -196,8 +199,6 @@
 \begin{itemize}
 	
 \item Liu, Yixin and \textbf{Xu, Chengxin}. De-stereotyping Public Performance Evaluation. Under review at {\it Public Administration Review}.
-
-\item Vogel, Dominik, and \textbf{Xu, Chengxin}. Everything hacked? What is the Evidential Value of the Experimental Public Administration Literature? Invited to revise and resubmit at {\it Journal of Behavioral Public Administration}.
 
 \end{itemize}
 
@@ -305,6 +306,8 @@
 
 \section*{AWARDS AND HONORS}
 \begin{itemize}
+
+\item {\it Paul Volcker Junior Scholar Research Grant}, American Political Science Association, 2021.
 	
 \item {\it Student Assistantship Award (Competitive)}, College of Art \& Science, Seattle University, 2020-21. 
 	
