--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -136,7 +136,7 @@
    &{\it Dissertation}: Financing Social Missions: Essays on the Role of Commercialization in Nonprofit Social Service Organizations in the U.S.\\
    &\\
    2015 & \textbf{Rutgers University-Newark} \\
-   &Master of Public Administration\\
+   &{\it Master of Public Administration}\\
    & \\
    2010 & \textbf{East China University of Political Science and Law} \\
    &BA in \it{Law}
