--- a/files/cv/Chengxin_CV.tex
+++ b/files/cv/Chengxin_CV.tex
@@ -148,7 +148,7 @@
 
 \section*{RESEARCH INTERESTS}
 \begin{itemize}
-\item Public \& Nonprofit Management, Judgment and Decision Making in Public and Nonprofit Management, Methodology.
+\item Public \& Nonprofit Management, Ethical Decision Making in Public and Nonprofit Organizations, Methodology.
 \end{itemize}
 
 \bigskip
@@ -280,20 +280,20 @@
 \subsection*{Seattle University}
 \subsubsection*{Graduate level}
 \begin{itemize}
-	\item Research Design
-	\item Foundations of Public Administration
-	\item Economic Analysis
+	\item Research Design (\textit{In person \& Online})
+	\item Foundations of Public Administration (\textit{In person \& Online})
+	\item Economic Analysis (\textit{In person \& Online})
 \end{itemize}
 
 \subsection*{Rutgers University-Newark}
 \subsubsection*{Undergraduate level}
 \begin{itemize}	
-\item Introduction to Nonprofit Administration
+\item Introduction to Nonprofit Administration (\textit{In person})
 \end{itemize}
 
 \subsubsection*{Graduate level}
 \begin{itemize}	
-\item Applied Research Design
+\item Applied Research Design (\textit{In person \& Online})
 \end{itemize}
 
 \subsubsection*{Doctoral level}
@@ -377,32 +377,33 @@
 
 \bigskip
 
-%\section*{REFERENCES}
-%\begin{minipage}{0.45\linewidth}
-%    \textbf{Dr. Lindsey McDougle}\\
-%    Associate Professor \\
-%    Rutgers University-Newark\\
-%    111 Washington St., Newark, NJ 07102\\
-%    Phone: (973)-353-5336 \\
-%    Email: \href{mailto: lindsey.mcdougle@rutgers.edu}{\tt  lindsey.mcdougle@rutgers.edu} \\
-%\end{minipage}
-%\begin{minipage}{0.45\linewidth}
-%    \textbf{Dr. Sebastian Jilke}\\
-%    Assistant Professor \\
-%    Rutgers University-Newark\\
-%    111 Washington St., Newark, NJ 07102\\
-%    Phone: (973)-353-3706 \\
-%    Email: \href{mailto: sebastian.jilke@rutgers.edu}{\tt  sebastian.jilke@rutgers.edu} \\
-%\end{minipage}
+\section*{REFERENCES}
+\begin{minipage}{0.45\linewidth}
+    \textbf{Dr. Lindsey McDougle}\\
+    Associate Professor \\
+    Rutgers University-Newark\\
+    111 Washington St., Newark, NJ 07102\\
+    Phone: (973)-353-5336 \\
+    Email: \href{mailto: lindsey.mcdougle@rutgers.edu}{\tt  lindsey.mcdougle@rutgers.edu} \\
+\end{minipage}
 
-%\begin{minipage}{0.45\linewidth}
-%    \textbf{Dr. Marc Holzer}\\
-%    Distinguished Professor \\
-%    Suffolk University-Boston\\
-%    73 Tremont St., Boston, MA 02108\\
-%    Phone: (617)-573-8316 \\
-%    Email: \href{mailto: mholzer@suffolk.edu}{\tt  mholzer@suffolk.edu} \\
-%\end{minipage}
+\begin{minipage}{0.45\linewidth}
+    \textbf{Dr. Sebastian Jilke}\\
+    Associate Professor \\
+    Georgetown University\\
+    37th and O Streets NW, Washington, D.C. 20057\\
+    Phone: (202)-687-0100 \\
+    Email: \href{mailto: sebastian.jilke@georgetown.edu}{\tt  sebastian.jilke@georgetown.edu} \\
+\end{minipage}
+
+\begin{minipage}{0.45\linewidth}
+    \textbf{Dr. Marc Holzer}\\
+    Distinguished Professor \\
+    Suffolk University-Boston\\
+    73 Tremont St., Boston, MA 02108\\
+    Phone: (617)-573-8316 \\
+    Email: \href{mailto: mholzer@suffolk.edu}{\tt  mholzer@suffolk.edu} \\
+\end{minipage}
 %\begin{minipage}{0.45\linewidth}
 %    \textbf{Dr. Curtis Child}\\
 %    Associate Professor \\
